# NiftiTorch

./: .buildinfo  .flake8  .gitignore  README.md  genindex.html  index.html  modules.html  niftitorch.html  niftitorch.losses.html  niftitorch.models.html  niftitorch.transforms.html  objects.inv  pyproject.toml  requirements.txt  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree  modules.doctree  niftitorch.doctree  niftitorch.losses.doctree  niftitorch.models.doctree  niftitorch.transforms.doctree
.github/workflows/: flake8.yml  main.yml  sphinx-build.yml
_sources/: modules.rst.txt  niftitorch.losses.rst.txt  niftitorch.models.rst.txt  niftitorch.rst.txt  niftitorch.transforms.rst.txt
docs/source/: conf.py  index.rst
niftitorch/: NiftiLoader.py  utils.py
source/: conf.py  index.rst
src/niftitorch/: IterableNiftiLoader.py  NiftiLoader.py  __init__.py  test.ipynb  utils.py
src/niftitorch.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/niftitorch/losses/: CombinedLoss.py  HistogramLoss.py  PerceptualLoss.py  __init__.py
src/niftitorch/models/: UNet.py  WassersteinGAN.py  __init__.py
src/niftitorch/transforms/: Transforms.py  __init__.py
test/: test_loader.py
tests/: test_loader.py  test_loader_volume.py  test_losses.py  test_transforms.py
tests/dataset/image/: IXI083-image.nii  IXI290-image.nii  IXI522-image.nii
tests/dataset/mask/: IXI083-mask.nii  IXI290-mask.nii  IXI522-mask.nii
